force-app/main/default/objects/pse__Resource_Request_Set__c/pse__Resource_Request_Set__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ResourceRequestSetHelp</customHelpPage>
    <description>Represents one or more resources held against a resource request. When one resource request in a set is assigned, the others are cancelled and the object is updated with a lookup to the resource request that was actually staffed.</description>
    <label>Resource Request Set</label>
    <nameField>
        <displayFormat>RR Set-{0000}</displayFormat>
        <label>Resource Request Set  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Request Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>