force-app/main/default/objects/pse__Resource_Request_Set__c/fields/pse__Master_Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Master_Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the resource request to be copied when creating a resource request set.</description>
    <inlineHelpText>Lookup to the resource request to be copied when creating a resource request set.</inlineHelpText>
    <label>Master Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Resource Request Sets (Master Resource Request)</relationshipLabel>
    <relationshipName>Resource_Request_Sets1</relationshipName>
    <type>Lookup</type>
</CustomField>