force-app/main/default/objects/pse__Resource_Request_Set__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the opportunity. This is copied from the source resource request.</description>
    <inlineHelpText>Lookup to the opportunity. This is copied from the source resource request.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resource Request Sets</relationshipLabel>
    <relationshipName>Resource_Request_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>