force-app/main/default/objects/pse__Resource_Request_Set__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the project. This is copied from the source resource request.</description>
    <inlineHelpText>Lookup to the project. This is copied from the source resource request.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Resource Request Sets</relationshipLabel>
    <relationshipName>Resource_Request_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>